hid the input field from the user

--- a/src/app/address/AddressForm.scss
+++ b/src/app/address/AddressForm.scss
@@ -1,5 +1,9 @@
 @import "../ui/Base";
 
+#field_37Input {
+    display: none;
+}
+
 .checkout-address {
     display: flex;
     flex-flow: row wrap;
